welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:8: error: value droite is not a member of Unit
  droite();avance();gauche();avance();avance()droite()
                                              ^FlowerCase:19: error: value droite is not a member of Unit
  droite();avance();gauche();avance();avance()droite()
                                              ^FlowerCase:1: error: method run is defined twice
  conflicting symbols both originated in file 'plm.runtime1.FlowerCase'
override def run(){
             ^